test_suite/tests/ui/with-variant/skip_de_newtype_field.stderr
error: variant `Newtype` cannot have both #[serde(deserialize_with)] and a field #0 marked with #[serde(skip_deserializing)]
 --> $DIR/skip_de_newtype_field.rs:6:5
  |
6 | /     #[serde(deserialize_with = "deserialize_some_newtype_variant")]
7 | |     Newtype(#[serde(skip_deserializing)] String),
  | |________________________________________________^

error: aborting due to previous error

